# pyocloop

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml
examples/: PLAN.md  loop-prompt.md
src/pyocloop/: __main__.py  cli.py  opencode_client.py  opencode_server.py  plan_parser.py  tui.py
