[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pyocloop"
version = "0.2.0"
description = "TUI loop harness that orchestrates OpenCode to execute tasks from a PLAN.md file iteratively"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "Ronan Barzic", email = "rbarzic@gmail.com" },
]
requires-python = ">=3.11"
keywords = ["opencode", "ai", "tui", "automation", "textual"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Environment :: Console",
    "Topic :: Software Development",
    "Topic :: Utilities",
]
dependencies = [
    "textual>=0.80",
    "httpx>=0.27",
    "httpx-sse>=0.4",
    "typer>=0.12",
]

[project.urls]
Homepage = "https://github.com/rbarzic/pyocloop"
Repository = "https://github.com/rbarzic/pyocloop"
Issues = "https://github.com/rbarzic/pyocloop/issues"

[project.scripts]
ocloop = "pyocloop.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/pyocloop"]
